update for html

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,6 +1,10 @@
 extends layout
-
-block content
-  h1= title
-  p #{title}
-  a(href=`mailto:colm.begley@derrystrabane.com`) Send an email
+doctype html              
+html. // THAT DOT
+    <body>     
+        <div>Hello, yes this is dog</div>
+    </body>
+//- block content
+  //- h1= title
+  //- p #{title}
+  //- a(href=`mailto:colm.begley@derrystrabane.com`) Send an email
