--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+doctype htm             
+html.
+    <body>     
+        <div>Hello, yes this is dog</div>
+    </body>
+//- block content
+//-   h1= title
+//-   p Welcome to #{title}
