api framework in progress

--- a/views/api.jade
+++ b/views/api.jade
@@ -1,7 +1,7 @@
 doctype html              
 html. 
     <body>     
-        <div>Hello, yes this is dog1</div>
+        <div>Your Mileage is #{title}  </div>
     </body>
 //- block content
   //- h1= title
