--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 doctype htm             
 html.
-    <body>     
+    <body>
+        #{title}     
         <div>Hello, yes this is dog</div>
     </body>
 //- block content
