--- a/views/index.jade
+++ b/views/index.jade
@@ -11,11 +11,12 @@ html.
           $.post("http://localhost:3000/api/login",{user: user,password: pass}, function(data){
             if(data)
               {
+                window.localStorage.setItem('mydata', data)
                 //- window.location = data.redirect
                 //- $("#user").val() = data
-                console.log(data);
-                console.log(JSON.parse(data).user)
-                //- alert("login success");
+                //- console.log(data);
+                //- console.log(JSON.parse(data).user)
+                window.location = "/home/" + JSON.parse(data).user
               }
           });
         });
@@ -24,6 +25,7 @@ html.
     </head>
     <body>
         #{title}     
+       
         <div>Hello, yes this is dog</div>
          <h1>Hello people !</h1>
         <input type="TEXT" id="user" size="40"/><br/>
